--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div>
         <h1>Exercício com CSS.</h1>
         <h2>Subtitulo</h2>
-        <a href="">link 1|</a><a href="">link 2|</a><a href="">link 3</a>
+        <li><a href="">link 1 |</a><a href="">link 2 |</a><a href="">link 3</a></li>
     </div>
     <section>
         <h2>Seção 01</h2>
-        <p>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
             veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
@@ -26,29 +26,36 @@
         </p>
         <article>
             <h2>Artigo 01</h2>
-            <p>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                 veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
                 esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
                 non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <img>
+            <figure>
+                <img src="img/1.gif" alt=”Imagem”>
+                <figcaption>Figura 1. Imagem</figcaption>
+            </figure>
         </article>
         <article>
             <h2>Artigo 02</h2>
-            <p>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                 veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
                 esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
                 non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
+            <figure>
+                <img src="img/2.jpg" alt=”Imagem”>
+                <figcaption>Figura 2. Imagem</figcaption>
+            </figure>
         </article>
-        <footer>
-            <h3>Rodapé</h3>
-        </footer>
-
+    </section>
+    <footer>
+        <p>Rodapé</p>
+    </footer>
 </body>
 
 </html>
